--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-tabs": "^6.0.2"
   },
   "devDependencies": {
